# EdgyEggs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: SOP_Eltopo.cpp  SOP_Eltopo.hpp  SOP_IGLDeform.cpp  SOP_IGLDeform.hpp  SOP_IGLDiscreteGeo.cpp  SOP_IGLDiscreteGeo.hpp  SOP_IGLMain.cpp  SOP_IGLUVproject.cpp  SOP_IGLUVproject.hpp  SOP_ShapeOp.cpp  SOP_ShapeOp.hpp  converters.cpp  converters.hpp  mesh2bgeo.cpp
src/SOP_Eltopo/: CMakeLists.txt  SOP_Eltopo.cpp  SOP_Eltopo.hpp
src/SOP_IGLDeform/: CMakeLists.txt  SOP_IGLDeform.cpp
src/SOP_IGLDiscreteGeo/: CMakeLists.txt  SOP_IGLDiscreteGeo.cpp  SOP_IGLDiscreteGeo.hpp  discretegeometry.cpp  discretegeometry.hpp  geodesicdistance.hpp
src/SOP_IGLUVproject/: CMakeLists.txt  SOP_IGLUVproject.cpp  SOP_IGLUVproject.hpp
src/SOP_PCAlign/: CMakeLists.txt  INTEL_LICENSE  SOP_PCAlign.cpp  SOP_PCAlign.hpp  intel_fgr.cpp  intel_fgr.hpp  pcl_fpfh.hpp
src/SOP_ShapeOp/: CMakeLists.txt  SOP_ShapeOp.cpp  SOP_ShapeOp.hpp
